# rag_news_hack

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/rag_news_hack/: gradio_chat.py  rss_index.py
src/rag_news_hack/agentutil/: __init__.py
src/rag_news_hack/agentutil/agent/: __init__.py  autogen.py  base.py  openai.py
src/rag_news_hack/agentutil/chunk/: __init__.py  base.py  spacy.py
src/rag_news_hack/agentutil/datastore/: __init__.py  base.py  json.py
src/rag_news_hack/agentutil/embedding/: __init__.py  base.py  openai.py
src/rag_news_hack/agentutil/indexer/: base.py
src/rag_news_hack/agentutil/loader/: __init__.py  base.py  http.py
src/rag_news_hack/agentutil/ragstore/: __init__.py  azureaisearch.py  base.py  cosmosdb.py  postgres.py  sqlserver.py
src/rag_news_hack/agentutil/tool/: __init__.py  agent.py  base.py
src/rag_news_hack/json_config_store/: embedding_openai-text3-small.json  ragstore_aisearch.json  ragstore_cosmos.json  ragstore_postgres.json  ragstore_sqlserver.json
